# ml_accident_bgta

./: .gitignore  pyproject.toml
documents/: Metadata_Capas.xlsx  conteo_filas.csv  muestra_datos_sin_registro_en_accidente.csv  relaciones_tble.xlsx
notebooks/: 01_extract_data_from_dmb.ipynb  02_transform_and_load_extracted_data.ipynb  03_Analisis descriptivo.ipynb  04_data_model_monica.ipynb  04_quality_analysis.ipynb  05_data_model_shiguitau.ipynb  06_test.ipynb  Analisis descriptivo.ipynb  tabla_year_mes.csv
src/backend/: app_backend.py
src/config/: setup.py
src/data_workflow/create_tables/: create_tables.py  dict_tables.py
src/data_workflow/etl/: extract.py  load.py  transform.py
src/frontend/: app_frontend.py  config.py
src/model/: model.py
src/sql/: data_integration_pdn.sql
src/sql/test/: caso_extemporaneo.sql  count_ttal.sql  data_integration_dev.sql  ejemplo_formulario_en_todas_las_tablas.sql  find_forms_present_in_all_tbles.sql  testeo_data_integration.sql
