[tool.poetry]
name = "actividad-grado"
version = "0.1.0"
description = "Este es un proyecto para una actividad de graduacion"
authors = ["sancho3010 <santiagohiguita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
pandas = "^2.2.1"
ipykernel = "^6.29.4"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
seaborn = "^0.13.2"
folium = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
